# XorgIdealtek

./: .gitignore
1.10.1/xdrv/: Makefile  Makefile.am  Makefile.in  README.txt  config.status  configure  configure.in  install_RS232POSTouch  libtool  mkxincludes  mkxincludes.in  touch.calib  xfdrv.vpj  xfdrv.vpw  xfdrv.vpwhistu  xfdrv.vtg  xfdrv_cpp.h  xorg.conf
1.10.1/xdrv/src/: .depend  Ctrl_XInput.h  Makefile  Makefile.am  Makefile.in  idealtek.h  xfdrvtouch.c
